--- a/frontend/components/users-list/css/users-list.css
+++ b/frontend/components/users-list/css/users-list.css
@@ -1,5 +1,5 @@
 .usersList {
-  height: calc(29rem - 16px);
+  height: calc(29rem - 6px);
   overflow: hidden;
 }
 
